# lambda

./: CHANGELOG.md  README.md  default.nix  hie.yaml  lambda.cabal  test.lamb
app/: AST.hs  Eval.hs  Main.hs  Parser.hs  Pretty.hs  Repl.hs
lambda!/: arithmetic.lamb  conditional.lamb  list.lamb  test.lamb
