cabal-version:      2.4
name:               lambda
version:            0.1.0.0
build-type:         Simple

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Seungheon Oh
maintainer:         dan.oh0721@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable lambda
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Pretty
                   , AST
                   , Eval

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                      , megaparsec
                      , text
                      , pretty
                      , unordered-containers
    hs-source-dirs:   app
    default-language: Haskell2010
